--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
   "author": "anonymousHa04 <harsh97814@gmail.com>",
   "license": "MIT",
   "scripts": {
-  "dev": "vite",
-  "build": "vite build",
-  "preview": "vite preview"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "format": "biome format . --write",
+    "lint": "biome lint ."
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.9.4",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.0",
