--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "vite": "^6.2.6"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.4",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "tailwindcss": "^4.1.4"
   }
 }
